--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,21 @@
 ja:
+  ##########
+  # Title
+  ##########
   title:
     top: "ヵェの部屋♪"
 
+  ##########
+  # View
+  ##########
+  top:
+    index:
+      introduction: "サイトがさらにリニューアルオープンしました！ヾ(〃´∇｀)ﾉ\n\n2011年3月11日の地震以来、節電対策と致しましてサーバーをしばらく停止させて頂いておりましたが、今回heroku上で再開をさせて頂くこととなりました。長い間お待たせし、申し訳ありませんでした。m(__*)m\n\n 
+サイトの構成も変更し再作成しましたので、ホームページのURLも変更しております。\n
+非常にお手数をお掛けして心苦しいのですが、リンクの更新等よろしくお願い致します。\n\n
+♪☆･:*:･ﾟ'★.｡･:*:･ﾟ'(*･.･)ﾉ ･:*:･ﾟ'★.｡･:*:･ﾟ'☆♪\n
+このサイトは、ヵェ個人の趣味によって作成されたものです。
+少しずつではありますが、コンテンツを増やしたりしていきます。\n
+今はブログしか置いていませんが、今後は描いた絵を載せたり、作ったゲームをアップし
+たりなどしようと思っています。\nどうか気長にお待ちください。
+今後とも宜しくお願い致します！＾＾\n\n"
