fixes #9 : The en space in a text is removed.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,6 +16,5 @@ ja:
 ♪☆･:*:･ﾟ'★.｡･:*:･ﾟ'(*･.･)ﾉ ･:*:･ﾟ'★.｡･:*:･ﾟ'☆♪\n
 このサイトは、ヵェ個人の趣味によって作成されたものです。
 少しずつではありますが、コンテンツを増やしたりしていきます。\n
-今はブログしか置いていませんが、今後は描いた絵を載せたり、作ったゲームをアップし
-たりなどしようと思っています。\nどうか気長にお待ちください。
+今はブログしか置いていませんが、今後は描いた絵を載せたり、作ったゲームをアップしたりなどしようと思っています。\nどうか気長にお待ちください。
 今後とも宜しくお願い致します！＾＾\n\n"
