--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,6 +6,21 @@ ja:
     top: "ヵェの部屋♪"
 
   ##########
+  # Menu
+  ##########
+  menu:
+    top: "TOP"
+    top_text: "このページです。"
+    blog: "BLOG"
+    blog_text: "ヵェのブログです。日々のクダらない日常や、ホームページ運用、絵の進行状況、そしてオンラインゲームでの出来事などヵェの人生を綴っています。"
+
+  ##########
+  # Sidebar
+  ##########
+  sidebar:
+    menu: "メニュー"
+
+  ##########
   # View
   ##########
   top:
