refs #11 : The table of updating information is added to the top.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -40,6 +40,8 @@ ja:
 少しずつではありますが、コンテンツを増やしたりしていきます。\n
 今はブログしか置いていませんが、今後は描いた絵を載せたり、作ったゲームをアップしたりなどしようと思っています。\nどうか気長にお待ちください。
 今後とも宜しくお願い致します！＾＾\n\n"
+      updated_informations: "更新情報"
+      updated_informations_list: "もっと見る..."
 
   ##########
   # View
