refs #22 : fixed テーブルの各項目の国際化対応と更新情報タイトルの追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,4 +52,6 @@ ja:
       updated_informations: "更新情報"
       updated_informations_list: "もっと見る..."
 
-
+  updated_informations:
+    show:
+      title: "ヵェの足跡●●"
