refs #19 : fixed 更新情報一覧のタイトルを国際化対応

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -53,5 +53,7 @@ ja:
       updated_informations_list: "もっと見る..."
 
   updated_informations:
+    index:
+      title: "ヵェの足跡●●"
     show:
       title: "ヵェの足跡●●"
