refs #34 : ログインのリンク追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -36,6 +36,7 @@ ja:
     top_text: "このページです。"
     blog: "BLOG"
     blog_text: "ヵェのブログです。日々のクダらない日常や、ホームページ運用、絵の進行状況、そしてオンラインゲームでの出来事などヵェの人生を綴っています。"
+    my_account: "My Account"
 
   ##########
   # View
