refs #30 : 確認画面を介したブログコメントの投稿機能を実装

--- a/config/locales/activerecord_ja.yml
+++ b/config/locales/activerecord_ja.yml
@@ -6,6 +6,14 @@ ja:
         title: "タイトル"
         news: "更新内容"
         comment: "コメント"
+      blog_comment:
+        title: "タイトル"
+        author: "名前"
+        url: "URL"
+        mail: "Mail"
+        content: "内容"
+        password: "パスワード"
+        admin: "管理者のみ閲覧"
       admin/blog:
         created_at: "作成日時"
         title: "タイトル"
