fixes #31 : 管理者のみが閲覧可能なコメントを非表示にし、各ブログのコメントを表示

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -80,4 +80,6 @@ ja:
       title: "☆ヵェの日記☆"
     blog:
       continue: "続きを表示..."
-
+  blog_comments:
+    blog_comment:
+      admin: "管理者のみが閲覧可能なコメントです。"
