refs #32 : 最近のコメントを追加し、最近のブログとともに並び順の見直し

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -28,6 +28,7 @@ ja:
     profile: "プロフィール"
     menu: "メニュー"
     recent_blogs: "最近の記事"
+    recent_blog_comments: "最近のコメント"
 
   profile:
     author: "Name："
