--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,6 +52,7 @@ ja:
     blogs: "ブログ一覧"
     new_blog: "ブログ作成"
     comments: "コメント一覧"
+    links: "リンク一覧"
     mail: "メール一覧"
     access: "アクセス履歴"
 
