--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -29,6 +29,7 @@ ja:
     menu: "メニュー"
     recent_blogs: "最近の記事"
     recent_blog_comments: "最近のコメント"
+    blog_link: "リンク"
 
   profile:
     author: "Name："
