refs #62 : バージョンを別画面で追加可能に

--- a/config/locales/activerecord_ja.yml
+++ b/config/locales/activerecord_ja.yml
@@ -26,6 +26,9 @@ ja:
         introduction: "紹介文"
         url: "URL"
         draft: "下書き"
+      admin/version:
+        flag: "現在のバージョン"
+        name: "バージョン名"
     errors:
       template:
         header:
