fixes #61 : リンクの左側にブログ管理者と説明を吹き出しで表示

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -57,7 +57,8 @@ ja:
     mail: "メール一覧"
     access: "アクセス履歴"
     versions: "バージョン一覧"
-
+  blog_link:
+    prefix: "様"
   ##########
   # View
   ##########
