refs #54 : メールフォームをサイドメニューに追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -30,6 +30,7 @@ ja:
     recent_blogs: "最近の記事"
     recent_blog_comments: "最近のコメント"
     blog_link: "リンク"
+    mail_form: "メールフォーム"
 
   profile:
     author: "Name："
