refs #73 : メール送信機能の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -91,3 +91,8 @@ ja:
   blog_comments:
     blog_comment:
       admin: "管理者のみが閲覧可能なコメントです。"
+
+  flash:
+    create_mail_form: "メールが送信されました。"
+    cannot_create_mail_form: "メールの送信に失敗しました。"
+
