--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -91,6 +91,7 @@ ja:
   blog_comments:
     blog_comment:
       admin: "管理者のみが閲覧可能なコメントです。"
+      url: "URL"
 
   flash:
     create_mail_form: "メールが送信されました。"
