fixes #71 : プロフィールを文章に変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -39,8 +39,7 @@ ja:
     at: "@"
     twitter_text: "kae_kasui"
     twitter_url: "https://twitter.com/"
-    favorite: "Favorite："
-    favorite_text: "甘いもの/Ruby on Rails/漫画/みかん/ゲーム/卵/黒/電気製品/トイプードル/バームクーヘン/アニメ/etc..."
+    introduce: "WEBプログラマ、に憧れるSI業界SIer。お花咲いております。みかん食いちらかしております。絵を描いたり、音楽作ったり、プログラミングしたり、工作したり、ゲーム作ったり、もの作りサイコー。自己満ついでにサイトも全部手作り。ぽへー。"
   menu:
     my_account: "My Account"
     top: "TOP"
