--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -39,7 +39,7 @@ ja:
     at: "@"
     twitter_text: "kae_kasui"
     twitter_url: "https://twitter.com/"
-    introduce: "WEBプログラマ、に憧れるSI業界SIer。お花咲いております。みかん食いちらかしております。絵を描いたり、音楽作ったり、プログラミングしたり、工作したり、ゲーム作ったり、もの作りサイコー。自己満ついでにサイトも全部手作り。ぽへー。"
+    introduce: "WEBプログラマ、に憧れるSI業界SIer。お花咲いております。みかん食いちらかしております。絵を描いたり、音楽作ったり、プログラミングしたり、工作したり、ゲーム作ったり。自己満ついでにサイトも全部手作り。ぽへー。"
   menu:
     my_account: "My Account"
     top: "TOP"
